shellfirm/src/snapshots/shellfirm__config__test_config__can_remove_checks_group-2.snap
---
source: shellfirm/src/config.rs
expression: config.save_config_file_from_struct(&mut context.unwrap())
---
Ok(
    (),
)
