shellfirm/src/snapshots/shellfirm__config__test_config__can_remove_checks_group-3.snap
---
source: shellfirm/src/config.rs
expression: "config.remove_checks_group(&[\"test-1\".to_string()])"
---
Ok(
    Context {
        challenge: Math,
        includes: [
            "default-check",
            "test-2",
        ],
        version: "0.0.0",
        checks: [
            Check {
                test: "default-check",
                method: Regex,
                enable: true,
                description: "",
                from: "default-check",
                challenge: Default,
                filters: {},
            },
            Check {
                test: "test-2",
                method: Regex,
                enable: true,
                description: "",
                from: "test-2",
                challenge: Default,
                filters: {},
            },
        ],
    },
)
