shellfirm/src/snapshots/shellfirm__config__test_config__can_reset_config-2.snap
---
source: shellfirm/src/config.rs
expression: "fs::read_to_string(&config.config_file_path)"
---
Ok(
    "---\nchallenge: Math\nincludes:\n  - default-check\n  - test-2\nversion: 0.0.0\nchecks:\n  - test: default-check\n    method: Regex\n    enable: true\n    description: \"\"\n    from: default-check\n    challenge: Default\n    filters: {}\n  - test: test-2\n    method: Regex\n    enable: true\n    description: \"\"\n    from: test-2\n    challenge: Default\n    filters: {}\n",
)
