shellfirm/src/snapshots/shellfirm__config__test_config__can_reset_config-3.snap
---
source: shellfirm/src/config.rs
expression: "config.reset_config(Some(\"1\".to_string()))"
---
Ok(
    (),
)
