shellfirm/src/snapshots/shellfirm__config__test_config__can_reset_config_with_with_backup-2.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        ignores: [],
    },
)
