shellfirm/src/snapshots/shellfirm__config__test_config__can_reset_config_with_with_backup-3.snap
---
source: shellfirm/src/config.rs
expression: read_dir(config.root_folder).unwrap().count()
---
2
