shellfirm/src/snapshots/shellfirm__config__test_config__can_reset_config_with_with_backup.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Yes,
        includes: [
            "base",
            "fs",
            "git",
        ],
        ignores: [],
    },
)
