shellfirm/src/snapshots/shellfirm__config__test_config__can_save_config_file_from_struct-2.snap
---
source: shellfirm/src/config.rs
expression: settings_config.load_config_from_file()
---
Ok(
    Context {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        version: "0.0.0",
        checks: [
            Check {
                test: "is value",
                method: Contains,
                enable: true,
                description: "description",
                from: "from",
                challenge: Default,
                filters: {},
            },
        ],
    },
)
