shellfirm/src/snapshots/shellfirm__config__test_config__can_save_config_file_from_struct.snap
---
source: shellfirm/src/config.rs
expression: config.save_config_file_from_struct(&mut context)
---
Ok(
    (),
)
