shellfirm/src/snapshots/shellfirm__config__test_config__can_update_challenge-2.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Yes,
        includes: [
            "base",
            "fs",
            "git",
        ],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
    },
)
